feat: add word many route
